syntax = "proto3";

package maschine.plugin.v1;

option go_package = "maschine.io/plugin-sdk/sdk;sdk";

// Plugin service defines the interface for Maschine plugins
service Plugin {
  // GetMetadata returns plugin metadata
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  
  // Execute runs the plugin function
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
  
  // Health check for plugin
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GetMetadataRequest {}

message GetMetadataResponse {
  string name = 1;
  string version = 2;
  repeated string supported_resources = 3;
  map<string, string> capabilities = 4;
}

message ExecuteRequest {
  string resource = 1;
  bytes input = 2;
  map<string, bytes> parameters = 3;
  map<string, string> credentials = 4;
  map<string, string> context = 5;
}

message ExecuteResponse {
  bytes output = 1;
  string error = 2;
  map<string, string> metadata = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string message = 2;
}